# task_master

./: .gitignore  main.py  models.py  package-lock.json  pyproject.toml
backend/: config.py  error_messages.py  main.py  models.py  pyproject.toml  pytest.ini  routes.py  test_models.py  test_routes.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: DualListBox.tsx
frontend/src/pages/: CreateTaskPage.tsx  ViewAllTasksPage.tsx  ViewTaskPage.tsx
frontend/src/services/: api.ts
