[project]
name = "task-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.5.1",
    "fastapi>=0.136.1",
    "ipdb>=0.13.13",
    "neomodel>=6.1.0",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
]

[tool.pytest.ini_options]
env = [
    "NEOMODEL_CYPHER_CONNECTION_URL=bolt://neo4j:password123@localhost:7788"
]
